# tinyrenderer

./: .gitignore  CMakeLists.txt  main.cpp  main.cpp.autosave
common/: drawer.cpp  drawer.h
lib/: geometry.cpp  geometry.h  tgaimage.cpp  tgaimage.h
